[tool.poetry]
name = "binbot"
version = "0.1.0"
description = ""
authors = ["Mariano Gappa <spinetta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-binance = "^0.7.9"
SQLAlchemy = "^1.3.22"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
